ultimo commit para web

--- a/public/cliente.html
+++ b/public/cliente.html
@@ -119,9 +119,9 @@
 <body class="bg-secondary-subtle">
     <nav class="navbar">
         <div class="container-fluid">
-            <a class="logo ms-4 navbar-brand" style="color: #e7d49e" href="homepage.html">MyLex</a>
+            <a class="logo ms-4 navbar-brand" href="homepage.html">MyLex</a>
             <div class="mx-5">
-                <a class="p-2" style="color: #e7d49e" href="calendar.html">Agenda</a>
+                <a class="p-2" style="color: #e7d49e" href="vanillacalendar.html">Agenda</a>
                 <a class="p-2" style="color: #e7d49e" href="processos.html">Processos</a>
             </div>
         </div>
@@ -146,6 +146,16 @@
                 </tr>
             </thead>
             <tbody id="clientTable">
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        <button class="btn btn-warning btn-sm">Editar</button>
+                        <button class="btn btn-danger btn-sm">Excluir</button>
+                    </td>
+                </tr>
                 <tr>
                     <td></td>
                     <td></td>
@@ -183,8 +193,8 @@
                             <input type="text" class="form-control" id="clientPhone" required>
                         </div>
                         <div class="mb-3">
-                            <label for="clientAddress" class="form-label">Processo</label>
-                            <input type="text" class="form-control" id="clientAddress" required>
+                            <label for="clientProcess" class="form-label">Processo</label>
+                            <input type="text" class="form-control" id="clientProcess" required>
                         </div>
                     </form>
                 </div>
@@ -217,7 +227,7 @@
                     <td>${client.nomeCompleto}</td>
                     <td>${client.email}</td>
                     <td>${client.telefone || ''}</td>
-                    <td>${client.endereco || ''}</td>
+                    <td>${client.processo || ''}</td>
                     <td>
                         <button class="btn btn-warning btn-sm" onclick="editClient('${client._id}')">Editar</button>
                         <button class="btn btn-danger btn-sm" onclick="deleteClient('${client._id}')">Excluir</button>
@@ -235,7 +245,7 @@
             const clientName = document.getElementById('clientName').value;
             const clientEmail = document.getElementById('clientEmail').value;
             const clientPhone = document.getElementById('clientPhone').value;
-            const clientAddress = document.getElementById('clientAddress').value;
+            const clientProcess = document.getElementById('clientProcess').value;
 
             const response = await fetch('http://localhost:3000/cliente/', {
                 method: 'POST',
@@ -246,7 +256,7 @@
                     nomeCompleto: clientName,
                     email: clientEmail,
                     telefone: clientPhone,
-                    endereco: clientAddress
+                    processo: clientProcess
                 })
             });
 
@@ -271,12 +281,12 @@
             document.getElementById('clientName').value = client.nomeCompleto;
             document.getElementById('clientEmail').value = client.email;
             document.getElementById('clientPhone').value = client.telefone || '';
-            document.getElementById('clientAddress').value = client.endereco || '';
+            document.getElementById('clientProcess').value = client.processo || '';
             document.getElementById('saveClientButton').onclick = async function () {
                 const clientName = document.getElementById('clientName').value;
                 const clientEmail = document.getElementById('clientEmail').value;
                 const clientPhone = document.getElementById('clientPhone').value;
-                const clientAddress = document.getElementById('clientAddress').value;
+                const clientProcess = document.getElementById('clientProcess').value;
 
                 const response = await fetch(`http://localhost:3000/cliente/${clientId}`, {
                     method: 'PUT',
@@ -287,7 +297,7 @@
                         nomeCompleto: clientName,
                         email: clientEmail,
                         telefone: clientPhone,
-                        endereco: clientAddress
+                        processo: clientProcess
                     })
                 });
 
